Fixed testimonial overflow. Adjusted font size for small screens.

--- a/src/app/components/pages/testimonials/testimonials.component.scss
+++ b/src/app/components/pages/testimonials/testimonials.component.scss
@@ -1,4 +1,5 @@
 section {
+  margin:1rem;
   .heading {
     padding: 5rem 0;
   }
