--- a/src/app/components/shared/testimonial/testimonial.component.scss
+++ b/src/app/components/shared/testimonial/testimonial.component.scss
@@ -3,9 +3,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 500px;
-  height: 650px;
-  margin-inline: auto;
+  aspect-ratio: 1/2;
+  max-width:500px;
   border-radius: 9px;
 
   .icon {
