--- a/src/assets/scss/_fonts.scss
+++ b/src/assets/scss/_fonts.scss
@@ -4,8 +4,8 @@
 //Map of base font-sizes based on screen size
 
 $base-font-sizes: (
-  null: 10px,
-  320px: 10px,
+  null: 12px,
+  320px: 12px,
   480px: 12px,
   640px: 14px,
   960px: 16px,
